--- a/assets/main.scss
+++ b/assets/main.scss
@@ -78,6 +78,4 @@ table th:last-child {
     border-right: none;
 }
 
-span.sp {display:none;}
-
-span.ps {unicode-bidi: bidi-override; direction: rtl;}
+.emailim {height: 1em; width: auto;}
