--- a/assets/main.scss
+++ b/assets/main.scss
@@ -78,4 +78,4 @@ table th:last-child {
     border-right: none;
 }
 
-.emailim {height: 1em; width: auto;}
+.emailim {height:1.23em;width:auto; padding-bottom:0.09em;}
